generate histogram figure

--- a/top50spotify2019.ipynb
+++ b/top50spotify2019.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -156,7 +165,8 @@
     "plt.ylabel('Number of tracks')\n",
     "ax.title.set_text('Histogram of Speechness (rapiness)')\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('histogram.png')"
    ]
   },
   {
